feature: 打包调整